# Voxel-Grid-Downsampling

./: CMakeLists.txt  LICENSE  README.md  test_voxel_grid_downsampling.cpp  test_voxel_grid_downsampling.py  voxel_grid_downsampling.cpp  voxel_grid_downsampling.hpp  voxel_grid_downsampling_binding.cpp  voxel_grid_downsampling_binding.pyi
cmake/: voxel_grid_downsamplingConfig.cmake
include/: voxel_grid_downsampling.cpp  voxel_grid_downsampling.hpp
test/: test_voxel_grid_downsampling.cpp
xxHash/: CMakeLists.txt  xxh_x86dispatch.c  xxh_x86dispatch.h  xxhash.h
